# baseball-trading-bot

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/odds_api_client/: api.py  schema.py
src/trader/: trader.py
src/trading_bot/: main.py
src/trading_bot/api/: constants.py  exceptions.py  odds_api_client.py  schema.py
src/trading_bot/core/: config.py  trader.py
tests/: test_dummy.py
